--- a/index.html
+++ b/index.html
@@ -266,25 +266,39 @@
 </section>
 
 
+
 <section id="faq">
   <h2>Întrebări frecvente</h2>
+
   <details>
     <summary>🎯 Pot câștiga bani pe termen lung din pariuri?</summary>
-    <p>Statistic, pe termen lung, casa câștigă. Chiar și când câștigi pe moment, pierderile vin inevitabil.</p>
+    <p>👉 <strong>Realitatea dură:</strong><br>
+    Pe termen lung, nu. Casele de pariuri au un avantaj matematic (margine) peste orice cotă.
+    Chiar și când ai o perioadă bună, te întorci cu mai puțin sau chiar pierzi tot.<br>
+    📉 95% dintre pariori ies în pierdere în mai puțin de 6 luni.</p>
   </details>
+
   <details>
     <summary>💡 Ce se întâmplă într-o ședință de consiliere?</summary>
-    <p>Discutăm despre experiența ta cu jocurile, identificăm cauze și construim împreună soluții reale și aplicabile.</p>
+    <p>👉 <strong>Fără terapii plictisitoare.</strong><br>
+    Vorbim real, fără mască. Analizăm obiceiurile tale, gândirea legată de bani, emoțiile care te duc la pariat.
+    Facem un plan pe termen scurt și unul de resetare emoțională și financiară.</p>
   </details>
+
   <details>
     <summary>📞 E confidențial?</summary>
-    <p>100%. Tot ce discutăm rămâne între noi. Fără judecată, fără expunere.</p>
+    <p>👉 <strong>100% da.</strong><br>
+    Numele tău, povestea ta, toate rămân între noi. Nu lucrez cu baze de date, nu trimit nimănui nimic. Ești în siguranță.</p>
   </details>
+
   <details>
     <summary>📆 Cât durează o ședință?</summary>
-    <p>În general, o ședință durează între 45-60 de minute și se desfășoară online, prin apel sau mesaj.</p>
+    <p>👉 Între 30-45 de minute.<br>
+    Se face prin apel audio/video (WhatsApp) sau mesaje – tu alegi.<br>
+    Important e să te simți în largul tău și să simți progres real, nu să cronometrezi timpul.</p>
   </details>
 </section>
+
 
 <section id="contact">
 
