--- a/index.html
+++ b/index.html
@@ -271,28 +271,28 @@
   <h2>Întrebări frecvente</h2>
 
   <details>
-    <summary>🎯 Pot câștiga bani pe termen lung din pariuri?</summary>
-    <p>👉 <strong>Realitatea dură:</strong><br>
+    <summary><strong>🎯 Pot câștiga bani pe termen lung din pariuri?</strong></summary>
+    <p>👉 Realitatea dură:<br>
     Pe termen lung, nu. Casele de pariuri au un avantaj matematic (margine) peste orice cotă.
     Chiar și când ai o perioadă bună, te întorci cu mai puțin sau chiar pierzi tot.<br>
     📉 95% dintre pariori ies în pierdere în mai puțin de 6 luni.</p>
   </details>
 
   <details>
-    <summary>💡 Ce se întâmplă într-o ședință de consiliere?</summary>
-    <p>👉 <strong>Fără terapii plictisitoare.</strong><br>
+    <summary><strong>💡 Ce se întâmplă într-o ședință de consiliere?</strong></summary>
+    <p>👉 Fără terapii plictisitoare.<br>
     Vorbim real, fără mască. Analizăm obiceiurile tale, gândirea legată de bani, emoțiile care te duc la pariat.
     Facem un plan pe termen scurt și unul de resetare emoțională și financiară.</p>
   </details>
 
   <details>
-    <summary>📞 E confidențial?</summary>
-    <p>👉 <strong>100% da.</strong><br>
+    <summary><strong>📞 E confidențial?</strong></summary>
+    <p>👉 100% da.<br>
     Numele tău, povestea ta, toate rămân între noi. Nu lucrez cu baze de date, nu trimit nimănui nimic. Ești în siguranță.</p>
   </details>
 
   <details>
-    <summary>📆 Cât durează o ședință?</summary>
+    <summary><strong>📆 Cât durează o ședință?</strong></summary>
     <p>👉 Între 30-45 de minute.<br>
     Se face prin apel audio/video (WhatsApp) sau mesaje – tu alegi.<br>
     Important e să te simți în largul tău și să simți progres real, nu să cronometrezi timpul.</p>
