--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
+
+  <title>Stop Pariuri – Consiliere reală pentru cei care vor să iasă din joc</title>
+  <meta name="description" content="Platformă educativă și de consiliere reală pentru persoanele prinse în capcana pariurilor. Informații, sprijin, soluții.">
+  <meta name="keywords" content="pariuri, jocuri de noroc, dependență, consiliere, stop joc, cum mă las de pariuri, consiliere jocuri de noroc, ajutor real, stop pariuri">
+  <meta name="robots" content="index, follow">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stop Pariuri – Realitate, nu iluzii</title>
