--- a/index.html
+++ b/index.html
@@ -175,7 +175,34 @@
         font-size: 1.3rem;
       }
     }
-    </style>
+    
+/* Secțiune Testimoniale */
+#testimoniale {
+  background-color: #f9f9f9;
+  padding: 40px 20px;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+#testimoniale h2 {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #222;
+}
+.testimonial {
+  max-width: 600px;
+  margin: 0 auto 30px auto;
+  font-style: italic;
+  color: #444;
+  text-align: center;
+}
+.testimonial span {
+  display: block;
+  margin-top: 10px;
+  font-weight: bold;
+  color: #222;
+}
+
+</style>
 </head>
 <body>
   <header>
@@ -316,7 +343,20 @@
   </ul>
 </section>
 
-  </main>
+  
+<section id="testimoniale" class="section">
+  <h2>Testimoniale</h2>
+  <div class="testimonial">
+    <p>„Am încercat de zeci de ori să mă las de pariuri. Doar aici am simțit în sfârșit că cineva chiar mă înțelege.”</p>
+    <span>— Alex, 32 ani</span>
+  </div>
+  <div class="testimonial">
+    <p>„Am reușit să pun STOP după ani de zile. Nu e ușor, dar acum știu că e posibil.”</p>
+    <span>— Daniel, 28 ani</span>
+  </div>
+</section>
+
+</main>
 
   <footer>
     © 2025 StopPariuri – Educație, Nu Iluzii
