--- a/index.html
+++ b/index.html
@@ -1,399 +1,72 @@
-
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-
-  <title>Stop Pariuri – Consiliere reală pentru cei care vor să iasă din joc</title>
-  <meta name="description" content="Platformă educativă și de consiliere reală pentru persoanele prinse în capcana pariurilor. Informații, sprijin, soluții.">
-  <meta name="keywords" content="pariuri, jocuri de noroc, dependență, consiliere, stop joc, cum mă las de pariuri, consiliere jocuri de noroc, ajutor real, stop pariuri">
-  <meta name="robots" content="index, follow">
-
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Stop Pariuri – Realitate, nu iluzii</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Stop Pariuri</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --primary: #1e3a8a;
-      --accent: #f97316;
-      --bg: #f1f5f9;
-      --text: #1e293b;
-    }
-
-    * {
-      box-sizing: border-box;
+    body {
+      font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
+      scroll-behavior: smooth;
     }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
+    .section, header, footer {
+      animation: fadeIn 1.2s ease;
     }
-
-    header {
-      background-color: var(--primary);
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    #toTopBtn {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 999;
+      font-size: 14px;
+      background-color: #444;
       color: white;
-      padding: 1rem 2rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      border: none;
+      border-radius: 4px;
+      padding: 8px 12px;
+      cursor: pointer;
     }
-
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 1200px;
-      margin: 0 auto;
+    #toTopBtn:hover {
+      background-color: #222;
     }
-
-    .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-    }
-
-    .logo img {
-      height: 36px;
-      margin-right: 10px;
-    }
-
-    ul.nav-links {
-      list-style: none;
-      display: flex;
-      gap: 1.5rem;
-    }
-
-    ul.nav-links li a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s;
-    }
-
-    ul.nav-links li a:hover {
-      color: var(--accent);
-    }
-
     main {
-      padding: 2rem;
-      max-width: 1000px;
-      margin: auto;
+      padding: 20px;
     }
-
-    section {
-      margin-bottom: 3rem;
-    }
-
-    h1, h2 {
-      color: var(--primary);
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: #e2e8f0;
-      color: #334155;
-      font-size: 0.9rem;
-    }
-  
-    
-    @media (max-width: 768px) {
-      header {
-        padding: 0.5rem 1rem;
-      }
-
-      nav {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .logo {
-        font-size: 1.2rem;
-        margin-bottom: 0.5rem;
-      }
-
-      ul.nav-links {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 0.5rem;
-        margin: 0;
-        padding: 0;
-      }
-
-      ul.nav-links li {
-        margin: 0;
-      }
-
-      ul.nav-links li a {
-        font-size: 0.9rem;
-        padding: 0.3rem 0.6rem;
-        background-color: rgba(255, 255, 255, 0.1);
-        border-radius: 4px;
-      }
-
-      nav {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      ul.nav-links {
-        flex-direction: column;
-        gap: 0.75rem;
-        margin-top: 1rem;
-      }
-
-      .logo {
-        margin-bottom: 1rem;
-      }
-
-      main {
-        padding: 1rem;
-      }
-
-      .responsive-stack {
-        flex-direction: column;
-      }
-
-      .responsive-stack > div {
-        width: 100%;
-      }
-
-      section {
-        padding: 1rem 0;
-      }
-
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      h2 {
-        font-size: 1.3rem;
-      }
-    }
-    
-/* Secțiune Testimoniale */
-#testimoniale {
-  background-color: #f9f9f9;
-  padding: 40px 20px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-}
-#testimoniale h2 {
-  text-align: center;
-  margin-bottom: 30px;
-  color: #222;
-}
-.testimonial {
-  max-width: 600px;
-  margin: 0 auto 30px auto;
-  font-style: italic;
-  color: #444;
-  text-align: center;
-}
-.testimonial span {
-  display: block;
-  margin-top: 10px;
-  font-weight: bold;
-  color: #222;
-}
-
-</style>
+  </style>
 </head>
 <body>
-  <header>
-    <nav>
-      <div class="logo">
-        <img src="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" alt="Logo" />
-        <span>Stop Pariuri</span>
-      </div>
-      <ul class="nav-links">
-        <li><a href="#acasa">Acasă</a></li>
-        <li><a href="#despre">Despre</a></li>
-        <li><a href="#resurse">Resurse</a></li>
-        <li><a href="#consiliere">Consiliere</a></li>
-        <li><a href="#pachete">Pachete</a></li>
-        <li><a href="#faq">FAQ</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section id="acasa">
-      <h1>Ai ajuns unde trebuie.</h1>
-      <p>Nu e o platformă care îți promite câștiguri rapide. E o pagină sinceră. Un semnal de alarmă pentru cei care simt că jocurile de noroc le controlează viața.</p>
-      <p>Fie că ai pierdut bani, timp sau încredere în tine – aici nu te judecă nimeni.</p>
-      <a href="#despre" style="display:inline-block;margin-top:1rem;padding:0.5rem 1rem;background-color:#f97316;color:white;text-decoration:none;border-radius:4px;">Află mai multe</a>
-    </section>
-
-    <section id="despre">
-      <h2>Despre proiect</h2>
-      <p>Acest site este un semnal de alarmă pentru cei care cred că pot bate sistemul. Realitatea nu minte, dar promisiunile cazinourilor – da.</p>
-    </section>
-  
-
-
-<section id="resurse">
-  <h2>Resurse & Strategii care dau iluzia câștigului</h2>
-  <p>Internetul e plin de strategii care promit profit sigur, dar realitatea bate promisiunea. Hai să vedem câteva exemple care pot păcăli:</p>
-
-  <h3>🎯 Arbitrage Betting (Sure Bets)</h3>
-  <p>Teoria: pariezi pe toate variantele posibile la cote diferite, astfel încât să ai profit indiferent de rezultat.<br>
-  Realitatea: Platformele detectează rapid această metodă, limitează conturile sau blochează câștigurile. Diferențele de cote dispar rapid. Risk enorm pentru un profit mic.</p>
-
-  <h3>🎲 Martingala la ruletă</h3>
-  <p>Teoria: Dublezi miza după fiecare pierdere ca să recuperezi tot și să ieși pe plus.<br>
-  Realitatea: După câteva pierderi consecutive riști să îți pierzi tot bugetul. Cazinourile au limite de pariere exact din acest motiv.</p>
-
-  <h3>📈 „Analiza” biletelor pe TikTok / YouTube</h3>
-  <p>Influenceri care pariază sume uriașe și câștigă „live” – dar nu arată niciodată toate pierderile. E doar marketing plătit de casele de pariuri.</p>
-
-  <p style="margin-top:1rem;">💡 <strong>Concluzie:</strong> Nicio strategie nu bate sistemul. Singura victorie reală e când alegi să te oprești.</p>
-</section>
-
-<section id="consiliere">
-  <h2>Consiliere și sprijin real</h2>
-  <p>Te-ai săturat să pierzi bani, timp și liniște sufletească? Nu ești singur.</p>
-  <p>Fie că ai nevoie de cineva care doar să te asculte, fie că vrei o strategie reală ca să te oprești, putem vorbi.</p>
-  <ul style="margin-left:1rem;">
-    <li>🔹 Îți arăt pașii practici prin care poți ieși din cercul vicios</li>
-    <li>🔹 Fără judecată. Fără promisiuni false. Doar adevăr și fapte</li>
-    <li>🔹 Ghidare 1-la-1 prin mesaje sau apel, dacă vrei</li>
-  </ul>
-  <p style="margin-top:1rem;">💬 Scrie-mi oricând pe <a href="https://wa.me/40754951373" target="_blank">WhatsApp</a> sau pe <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">Instagram</a>.</p>
-</section>
-
-
-<section id="pachete">
-  <h2>Pachete de consiliere</h2>
-  <p>Consilierea este 100% confidențială și personalizată. Fiecare sesiune este gândită să te ajute să înțelegi cauza dependenței și cum să ieși din ea.</p>
-
-  <div class="responsive-stack" style="display: flex; flex-wrap: wrap; gap: 2rem; margin-top: 2rem;">
-    <div style="flex: 1; min-width: 250px; background: #fef3c7; padding: 1rem; border-radius: 8px;">
-      <h3>🔹 1 ședință</h3>
-      <p>Explorăm situația ta și îți ofer un plan personalizat de primă etapă.</p>
-      <p><strong>Preț: 100 RON</strong></p>
-    </div>
-
-    <div style="flex: 1; min-width: 250px; background: #d1fae5; padding: 1rem; border-radius: 8px;">
-      <h3>🔸 Pachet 3 ședințe</h3>
-      <p>Ghidare continuă + suport între ședințe prin mesaje.</p>
-      <p><strong>Preț: 200 RON</strong></p>
-      <p><em>(Economisești 100 RON)</em></p>
-    </div>
-
-    <div style="flex: 1; min-width: 250px; background: #e0e7ff; padding: 1rem; border-radius: 8px;">
-      <h3>🔶 Pachet 5 ședințe</h3>
-      <p>Transformare completă: analizăm în profunzime, urmărim progresul și construim un plan de viață sănătos.</p>
-      <p><strong>Preț: 300 RON</strong></p>
-      <p><em>(Economisești 200 RON)</em></p>
-    </div>
-  </div>
-
-  <p style="margin-top: 2rem;">💬 Pentru programări, scrie-mi direct pe <a href="https://wa.me/40754951373" target="_blank">WhatsApp</a>.</p>
-</section>
-
-
-
-<section id="faq">
-  <h2>Întrebări frecvente</h2>
-
-  <details>
-    <summary><strong>🎯 Pot câștiga bani pe termen lung din pariuri?</strong></summary>
-    <p>👉 Realitatea dură:<br>
-    Pe termen lung, nu. Casele de pariuri au un avantaj matematic (margine) peste orice cotă.
-    Chiar și când ai o perioadă bună, te întorci cu mai puțin sau chiar pierzi tot.<br>
-    📉 95% dintre pariori ies în pierdere în mai puțin de 6 luni.</p>
-  </details>
-
-  <details>
-    <summary><strong>💡 Ce se întâmplă într-o ședință de consiliere?</strong></summary>
-    <p>👉 Fără terapii plictisitoare.<br>
-    Vorbim real, fără mască. Analizăm obiceiurile tale, gândirea legată de bani, emoțiile care te duc la pariat.
-    Facem un plan pe termen scurt și unul de resetare emoțională și financiară.</p>
-  </details>
-
-  <details>
-    <summary><strong>📞 E confidențial?</strong></summary>
-    <p>👉 100% da.<br>
-    Numele tău, povestea ta, toate rămân între noi. Nu lucrez cu baze de date, nu trimit nimănui nimic. Ești în siguranță.</p>
-  </details>
-
-  <details>
-    <summary><strong>📆 Cât durează o ședință?</strong></summary>
-    <p>👉 Între 30-45 de minute.<br>
-    Se face prin apel audio/video (WhatsApp) sau mesaje – tu alegi.<br>
-    Important e să te simți în largul tău și să simți progres real, nu să cronometrezi timpul.</p>
-  </details>
-</section>
-
-
-<section id="contact">
-
-  <h2>Contact</h2>
-  <p>Dacă ai nevoie de ajutor sau vrei să vorbim direct, mă poți contacta oricând:</p>
-  <ul style="list-style: none; padding-left: 0;">
-    <li>📱 Telefon / WhatsApp: <a href="https://wa.me/40754951373" target="_blank">+40 754 951 373</a></li>
-    <li>📸 Instagram: <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">@meferrrrrrrrrr</a></li>
-  </ul>
-</section>
-
-  
-<section id="testimoniale" class="section">
-  <h2>Testimoniale</h2>
-  <div class="testimonial">
-    <p>„Am încercat de zeci de ori să mă las de pariuri. Doar aici am simțit în sfârșit că cineva chiar mă înțelege.”</p>
-    <span>— Alex, 32 ani</span>
-  </div>
-  <div class="testimonial">
-    <p>„Am reușit să pun STOP după ani de zile. Nu e ușor, dar acum știu că e posibil.”</p>
-    <span>— Daniel, 28 ani</span>
-  </div>
-</section>
-
+<header class="section">
+  <h1 style="text-align:center;">Stop Pariuri</h1>
+</header>
+<main>
+  <section class="section">
+    <h2>Bine ai venit</h2>
+    <p>Acesta este un demo de test pentru îmbunătățiri UI.</p>
+  </section>
 </main>
-
-  <footer>
-    © 2025 StopPariuri – Educație, Nu Iluzii
-  </footer>
-
-  <script>
-    document.querySelectorAll('a[href^="#"]').forEach(link => {
-      link.addEventListener("click", function (e) {
-        e.preventDefault();
-        const target = document.querySelector(this.getAttribute("href"));
-        if (target) {
-          target.scrollIntoView({ behavior: "smooth" });
-        }
-      });
-    });
-  </script>
-
-<!-- 🛡️ Disclaimer legal -->
-<section id="disclaimer" style="padding: 2em; background-color: #f9f9f9; border-top: 1px solid #ddd;">
-  <h2>📌 Notă legală</h2>
-  <p style="font-size: 1rem; line-height: 1.5;">
-    Acest site oferă sprijin și îndrumare educativă persoanelor care vor să se lase de pariuri. Nu este un serviciu medical sau psihologic profesionist. Informațiile de aici nu înlocuiesc sfatul unui specialist acreditat.
-  </p>
-</section>
-
-<!-- 📄 Termeni și condiții -->
-<section id="termeni" style="padding: 2em; background-color: #ffffff; border-top: 1px solid #ddd;">
-  <h2>📄 Termeni și condiții</h2>
-  <p style="font-size: 1rem; line-height: 1.5;">
-    Prin utilizarea acestui site, ești de acord că informațiile oferite sunt strict cu scop educativ și de conștientizare. Nu ne asumăm responsabilitatea pentru deciziile financiare sau personale ale utilizatorilor.
-  </p>
-</section>
-
-<!-- ⚖️ Copyright -->
-<footer style="text-align: center; padding: 1em; background-color: #f1f1f1; font-size: 0.9rem; margin-top: 2em;">
-  © 2025 Stop Pariuri. Toate drepturile rezervate.
+<footer class="section" style="text-align:center; padding:20px;">
+  <p>&copy; 2025 Stop Pariuri</p>
 </footer>
-
+<button onclick="topFunction()" id="toTopBtn" title="Mergi sus">↑ Sus</button>
+<script>
+  let toTopBtn = document.getElementById("toTopBtn");
+  window.onscroll = function() {
+    if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+      toTopBtn.style.display = "block";
+    } else {
+      toTopBtn.style.display = "none";
+    }
+  };
+  function topFunction() {
+    window.scrollTo({top: 0, behavior: 'smooth'});
+  }
+</script>
 </body>
 </html>
