--- a/index.html
+++ b/index.html
@@ -11,104 +11,111 @@
       margin: 0;
       padding: 0;
       scroll-behavior: smooth;
-      line-height: 1.6;
       background-color: #fafafa;
-      color: #111;
     }
-    header, footer {
+    header {
       background-color: #fff;
-      padding: 15px 20px;
+      padding: 10px 20px;
       text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
-    h1 {
-      font-size: 1.8rem;
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 10px;
+      flex-wrap: wrap;
+    }
+    nav a {
+      text-decoration: none;
+      color: #222;
+      font-weight: 600;
+      padding: 6px 12px;
+      border-radius: 6px;
+    }
+    nav a:hover {
+      background-color: #ddd;
     }
     main {
-      padding: 20px;
       max-width: 800px;
       margin: auto;
+      padding: 20px;
     }
     section {
-      margin-bottom: 2rem;
-      animation: fadeIn 1.2s ease;
+      margin-bottom: 60px;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #fff;
+      border-top: 1px solid #ddd;
     }
-
-    #toTopBtn {
-      display: none;
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 999;
-      font-size: 14px;
-      background-color: #444;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      padding: 8px 12px;
-      cursor: pointer;
+    h2 {
+      color: #111;
     }
-    #toTopBtn:hover {
-      background-color: #222;
-    }
-
-    @media (max-width: 768px) {
-      body {
-        padding: 0 10px;
+    @media (max-width: 600px) {
+      nav {
+        gap: 10px;
       }
-      h1 {
-        font-size: 1.5rem;
-      }
-      main {
-        padding: 15px 10px;
-      }
-      section {
-        margin-bottom: 1.5rem;
-      }
-    }
-
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 1.3rem;
-      }
-      #toTopBtn {
-        font-size: 12px;
-        padding: 6px 10px;
+      nav a {
+        font-size: 14px;
       }
     }
   </style>
 </head>
 <body>
+
 <header>
   <h1>Stop Pariuri</h1>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#pachete">Pachete</a>
+    <a href="#testimoniale">Testimoniale</a>
+    <a href="#faq">FAQ</a>
+    <a href="#contact">Contact</a>
+  </nav>
 </header>
+
 <main>
-  <section>
+  <section id="home">
     <h2>Bine ai venit</h2>
-    <p>Acesta este un demo responsive pentru testarea pe mobil. Totul este acum optimizat.</p>
+    <p>Aici începe călătoria ta spre libertate. Vrem să îți oferim ajutor real, nu doar promisiuni.</p>
+  </section>
+
+  <section id="pachete">
+    <h2>Pachete Consiliere</h2>
+    <ul>
+      <li>1 ședință – 100 lei</li>
+      <li>3 ședințe – 200 lei</li>
+      <li>5 ședințe – 300 lei</li>
+    </ul>
+  </section>
+
+  <section id="testimoniale">
+    <h2>Testimoniale</h2>
+    <p>„Mulțumesc pentru că m-ați ajutat să mă opresc la timp.” – Andrei, 28 ani</p>
+    <p>„Un site sincer. Nimic nu m-a făcut să mă simt judecat.” – Maria, 35 ani</p>
+  </section>
+
+  <section id="faq">
+    <h2>Întrebări frecvente</h2>
+    <strong>Cât durează o ședință?</strong>
+    <p>Între 30-45 de minute, prin apel sau mesaj, în funcție de cum te simți mai confortabil.</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>📱 WhatsApp: <a href="https://wa.me/40754951373" target="_blank">+40 754 951 373</a></p>
+    <p>📸 Instagram: <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">@meferrrrrrrrrr</a></p>
   </section>
 </main>
+
 <footer>
-  <p>&copy; 2025 Stop Pariuri</p>
+  <p>&copy; 2025 Stop Pariuri. Toate drepturile rezervate.</p>
 </footer>
 
-<button onclick="topFunction()" id="toTopBtn" title="Mergi sus">↑ Sus</button>
-<script>
-  let toTopBtn = document.getElementById("toTopBtn");
-  window.onscroll = function() {
-    if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
-      toTopBtn.style.display = "block";
-    } else {
-      toTopBtn.style.display = "none";
-    }
-  };
-  function topFunction() {
-    window.scrollTo({top: 0, behavior: 'smooth'});
-  }
-</script>
 </body>
 </html>
