--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
 
 <main>
   <section id="home">
-    <h2>Bine ai venit</h2>
-    <p>Aici începe călătoria ta spre libertate. Vrem să îți oferim ajutor real, nu doar promisiuni.</p>
+    <h2>Te-ai săturat de pariuri? Aici începe eliberarea ta.</h2>
+    <p>Stop Pariuri este un spațiu sincer, fără promisiuni false, fără trucuri. Aici găsești sprijin real, idei clare și soluții simple pentru a scăpa de dependența de jocuri de noroc.</p>
+    <p>Nu ești singur. Zeci de oameni au spus STOP. Și tu poți.</p>
+    <a href="#pachete" style="display:inline-block; margin-top:10px; background:#000; color:#fff; padding:10px 20px; border-radius:6px; text-decoration:none;">Vezi cum începem</a>
   </section>
 
   <section id="pachete">
