--- a/index.html
+++ b/index.html
@@ -344,15 +344,29 @@
 </section>
 
   
-<section id="testimoniale" class="section">
-  <h2>Testimoniale</h2>
-  <div class="testimonial">
-    <p>„Am încercat de zeci de ori să mă las de pariuri. Doar aici am simțit în sfârșit că cineva chiar mă înțelege.”</p>
-    <span>— Alex, 32 ani</span>
-  </div>
-  <div class="testimonial">
-    <p>„Am reușit să pun STOP după ani de zile. Nu e ușor, dar acum știu că e posibil.”</p>
-    <span>— Daniel, 28 ani</span>
+<section id="testimoniale" style="padding: 40px 20px; background-color: #f9f9f9;">
+  <h2 style="text-align: center; margin-bottom: 30px;">Ce spun oamenii</h2>
+  <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
+    <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); max-width: 300px;">
+      <p style="font-style: italic;">„Nu credeam că pot scăpa de pariuri. Acum mă simt liber. Mulțumesc pentru tot sprijinul!”</p>
+      <p style="text-align: right; font-weight: bold;">– Andrei</p>
+    </div>
+    <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); max-width: 300px;">
+      <p style="font-style: italic;">„Mi-ați deschis ochii! N-am mai pus niciun bilet de 3 luni. Viața mea s-a schimbat.”</p>
+      <p style="text-align: right; font-weight: bold;">– Mihai</p>
+    </div>
+    <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); max-width: 300px;">
+      <p style="font-style: italic;">„Ajutor real. Fără promisiuni false. Doar fapte. Recomand din inimă!”</p>
+      <p style="text-align: right; font-weight: bold;">– Cristina</p>
+    </div>
+    <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); max-width: 300px;">
+      <p style="font-style: italic;">„E prima dată când cineva chiar înțelege ce simt și nu mă judecă.”</p>
+      <p style="text-align: right; font-weight: bold;">– Raul</p>
+    </div>
+    <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); max-width: 300px;">
+      <p style="font-style: italic;">„Site-ul ăsta m-a ajutat mai mult decât orice altceva. Mulțumesc!”</p>
+      <p style="text-align: right; font-weight: bold;">– Elena</p>
+    </div>
   </div>
 </section>
 
