--- a/index.html
+++ b/index.html
@@ -203,6 +203,20 @@
 }
 
 </style>
+
+<style>
+body {
+  background: linear-gradient(-45deg, #3a0d0d, #8e1c1c, #3a0d0d, #8e1c1c);
+  background-size: 400% 400%;
+  animation: gradientBG 20s ease infinite;
+}
+@keyframes gradientBG {
+  0% {background-position: 0% 50%;}
+  50% {background-position: 100% 50%;}
+  100% {background-position: 0% 50%;}
+}
+</style>
+
 </head>
 <body>
   <header>
