--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 <style>
 body {
-  background: linear-gradient(-45deg, #3a0d0d, #8e1c1c, #3a0d0d, #8e1c1c);
+  background: linear-gradient(-45deg, #e0e0e0, #bde0fe, #e0e0e0, #ffffff);
   background-size: 400% 400%;
   animation: gradientBG 20s ease infinite;
 }
