--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ body {
 </head>
 <body>
 
-<h1 id="typing-effect" style="color:white; font-size: 1.8rem; font-weight: bold; margin-top: 20px;"></h1>
+<h1 id="typing-effect" style="color:#d90429; font-size: 1.8rem; font-weight: bold; margin-top: 20px;"></h1>
 
   <header>
     <nav>
@@ -440,7 +440,7 @@ body {
 
 
 <script>
-const text = "Stop Pariuri – Schimbarea începe aici.";
+const text = "Stop pariuri - Escape the matrix like a mefer";
 let i = 0;
 function typeWriter() {
   if (i < text.length) {
