--- a/index.html
+++ b/index.html
@@ -280,12 +280,12 @@ html {
       </div>
       <ul class="nav-links">
         <li><a href="#acasa">Acasă</a></li>
-        <li><a href="#despre">Despre</a></li>
-        <li><a href="#resurse">Resurse</a></li>
-        <li><a href="#consiliere">Consiliere</a></li>
-        <li><a href="#pachete">Pachete</a></li>
+        <li><a href="#despre">ℹ️ Despre</a></li>
+        <li><a href="#resurse">📚 Resurse</a></li>
+        <li><a href="#consiliere">🧠 Consiliere</a></li>
+        <li><a href="#pachete">📦 Pachete</a></li>
         <li><a href="#faq">FAQ</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contact">📞 Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -402,7 +402,7 @@ html {
 
 <section id="contact">
 
-  <h2>Contact</h2>
+  <h2>📞 Contact</h2>
   <p>Dacă ai nevoie de ajutor sau vrei să vorbim direct, mă poți contacta oricând:</p>
   <ul style="list-style: none; padding-left: 0;">
     <li>📱 Telefon / WhatsApp: <a href="https://wa.me/40754951373" target="_blank">+40 754 951 373</a></li>
