--- a/index.html
+++ b/index.html
@@ -491,18 +491,86 @@ window.onload = typeWriter;
 </script>
 
 
-<!-- START: Contor de vizitatori -->
-<div id="visitor-counter" style="text-align: center; margin-top: 20px; font-size: 16px; color: white;">
-    Vizitatori pe site: <span id="visitor-count">...</span>
-</div>
+<!-- FOOTER PERSONALIZAT -->
+<footer style="background-color:#111; color:#fff; text-align:center; padding:20px; margin-top:60px; font-size:14px;">
+    <p><strong>Disclaimer:</strong> Acest site oferă sprijin educativ pentru renunțarea la pariuri. Nu oferim servicii medicale sau psihologice profesioniste.</p>
+    <p>&copy; 2025 Stop Pariuri. Toate drepturile rezervate.</p>
+</footer>
+
+
+<!-- BACK TO TOP BUTTON -->
+<button onclick="scrollToTop()" id="backToTopBtn" title="Înapoi sus">⬆️</button>
+<style>
+  #backToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    background-color: #d62828;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  #backToTopBtn:hover {
+    background-color: #b71c1c;
+  }
+</style>
 <script>
-    // Simulăm un număr de vizitatori random (între 100 și 999)
-    document.addEventListener("DOMContentLoaded", function() {
-        let vizitatori = Math.floor(100 + Math.random() * 900);
-        document.getElementById("visitor-count").innerText = vizitatori;
-    });
+  const btn = document.getElementById("backToTopBtn");
+  window.onscroll = () => {
+    if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+      btn.style.display = "block";
+    } else {
+      btn.style.display = "none";
+    }
+  };
+  function scrollToTop() {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+  }
 </script>
-<!-- END: Contor de vizitatori -->
+
+
+<!-- LOADER LA INTRAREA PE SITE -->
+<style>
+  #loader-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    z-index: 10000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .loader {
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid #d62828;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+</style>
+<div id="loader-wrapper"><div class="loader"></div></div>
+<script>
+  window.addEventListener("load", () => {
+    const loader = document.getElementById("loader-wrapper");
+    if (loader) {
+      loader.style.display = "none";
+    }
+  });
+</script>
 
 </body>
 </html>
