--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
     }
 
     h1, h2 {
+  .language-switcher {
+    margin-top: 1rem;
+  }
+
       color: var(--primary);
     }
 
@@ -202,6 +206,23 @@
   color: #222;
 }
 
+
+.language-switcher {
+  margin-left: 20px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-weight: bold;
+}
+.language-switcher a {
+  color: white;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+.language-switcher a:hover {
+  color: var(--accent);
+}
+
 </style>
 
 <style>
@@ -287,6 +308,13 @@ html {
         <li><a href="#faq">FAQ</a></li>
         <li><a href="#contact">📞 Contact</a></li>
       </ul>
+
+    <!-- 🌐 Language Switcher -->
+    <div class="language-switcher">
+      <a href="index.html">🇷🇴 RO</a>
+      |
+      <a href="en.html">🇬🇧 EN</a>
+    </div>
     </nav>
   </header>
 
@@ -332,6 +360,13 @@ html {
     <li>🔹 Fără judecată. Fără promisiuni false. Doar adevăr și fapte</li>
     <li>🔹 Ghidare 1-la-1 prin mesaje sau apel, dacă vrei</li>
   </ul>
+
+    <!-- 🌐 Language Switcher -->
+    <div class="language-switcher">
+      <a href="index.html">🇷🇴 RO</a>
+      |
+      <a href="en.html">🇬🇧 EN</a>
+    </div>
   <p style="margin-top:1rem;">💬 Scrie-mi oricând pe <a href="https://wa.me/40754951373" target="_blank">WhatsApp</a> sau pe <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">Instagram</a>.</p>
 </section>
 
@@ -408,6 +443,13 @@ html {
     <li>📱 Telefon / WhatsApp: <a href="https://wa.me/40754951373" target="_blank">+40 754 951 373</a></li>
     <li>📸 Instagram: <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">@meferrrrrrrrrr</a></li>
   </ul>
+
+    <!-- 🌐 Language Switcher -->
+    <div class="language-switcher">
+      <a href="index.html">🇷🇴 RO</a>
+      |
+      <a href="en.html">🇬🇧 EN</a>
+    </div>
 </section>
 
   
