--- a/en.html
+++ b/en.html
@@ -3,14 +3,14 @@
 <html lang="ro">
 <head>
 
-  <title>Stop Pariuri – Counseling reală pentru cei care vor să iasă din joc</title>
-  <meta name="description" content="Platformă educativă și de consiliere reală pentru persoanele prinse în capcana pariurilor. Informații, sprijin, soluții.">
-  <meta name="keywords" content="pariuri, jocuri de noroc, dependență, consiliere, stop joc, cum mă las de pariuri, consiliere jocuri de noroc, ajutor real, stop pariuri">
+  <title>Stop Gambling – Counseling reală pentru cei care vor să iasă din joc</title>
+  <meta name="description" content="An honest educational platform offering support, clarity, and real counseling for those trapped by gambling.">
+  <meta name="keywords" content="gambling, betting addiction, stop gambling, real help, gambling support, counseling, quit betting, stop games">
   <meta name="robots" content="index, follow">
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Stop Pariuri – Realitate, nu iluzii</title>
+  <title>Stop Gambling – Realitate, nu iluzii</title>
   <style>
     :root {
       --primary: #1e3a8a;
@@ -297,7 +297,7 @@ html {
     <nav>
       <div class="logo">
         <img src="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png" alt="Logo" />
-        <span>Stop Pariuri</span>
+        <span>Stop Gambling</span>
       </div>
       <ul class="nav-links">
         <li><a href="#acasa">Home</a></li>
@@ -482,7 +482,7 @@ html {
 </main>
 
   <footer>
-    © 2025 StopPariuri – Educație, Nu Iluzii
+    © 2025 StopGambling – Educație, Nu Iluzii
   </footer>
 
   <script>
@@ -515,7 +515,7 @@ html {
 
 <!-- ⚖️ Copyright -->
 <footer style="text-align: center; padding: 1em; background-color: #f1f1f1; font-size: 0.9rem; margin-top: 2em;">
-  © 2025 Stop Pariuri. Toate drepturile rezervate.
+  © 2025 Stop Gambling. Toate drepturile rezervate.
 </footer>
 
 
@@ -536,7 +536,7 @@ window.onload = typeWriter;
 <!-- FOOTER PERSONALIZAT -->
 <footer style="background-color:#111; color:#fff; text-align:center; padding:20px; margin-top:60px; font-size:14px;">
     <p><strong>Disclaimer:</strong> Acest site oferă sprijin educativ pentru renunțarea la pariuri. Nu oferim servicii medicale sau psihologice profesioniste.</p>
-    <p>&copy; 2025 Stop Pariuri. Toate drepturile rezervate.</p>
+    <p>&copy; 2025 Stop Gambling. Toate drepturile rezervate.</p>
 </footer>
 
 
