--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
+  <link rel="icon" type="image/png" href="https://meferrrrrrrrrr.github.io/stop-pariuri/logo.png">
 
   <title>Stop Pariuri – Consiliere reală pentru cei care vor să iasă din joc</title>
   <meta name="description" content="Platformă educativă și de consiliere reală pentru persoanele prinse în capcana pariurilor. Informații, sprijin, soluții.">
@@ -435,6 +436,14 @@ html {
       <p style="text-align: right; font-weight: bold;">– Elena</p>
     </div>
   </div>
+</section>
+
+
+<section id="share" style="text-align:center; margin-top:40px;">
+  <p style="font-size:1.1rem; margin-bottom:10px;">🔗 Trimite acest site unui prieten care are nevoie:</p>
+  <a href="https://wa.me/?text=Intră%20pe%20https%3A%2F%2Fmeferrrrrrrrrr.github.io%2Fstop-pariuri%20%E2%80%93%20un%20site%20real%20care%20te%20ajut%C4%83%20s%C4%83%20te%20opre%C8%99ti%20din%20pariuri." target="_blank" style="display:inline-block; background-color:#25D366; color:white; padding:10px 20px; border-radius:5px; font-weight:bold; text-decoration:none;">
+    📤 Distribuie pe WhatsApp
+  </a>
 </section>
 
 </main>
