--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ html {
 </head>
 <body>
 
-<h1 id="typing-effect" style="color:#d90429; font-size: 1.8rem; font-weight: bold; margin-top: 20px;"></h1>
+<h1 id="typing-effect" style="color:#ffffff; background-color:#000; padding:10px; text-align:center; font-size: 1.8rem; font-weight: bold; margin-top: 20px;"></h1>
 
   <header>
     <nav>
@@ -487,7 +487,7 @@ html {
 
 
 <script>
-const text = "Stop pariuri - Escape the matrix like a mefer";
+const text = "Stop Pariuri - Escape the matrix, be the change.";
 let i = 0;
 function typeWriter() {
   if (i < text.length) {
