--- a/index.html
+++ b/index.html
@@ -292,12 +292,17 @@ html {
   </header>
 
   <main>
-    <section id="acasa">
-      <h1>Ai ajuns unde trebuie.</h1>
-      <p>Nu e o platformă care îți promite câștiguri rapide. E o pagină sinceră. Un semnal de alarmă pentru cei care simt că jocurile de noroc le controlează viața.</p>
-      <p>Fie că ai pierdut bani, timp sau încredere în tine – aici nu te judecă nimeni.</p>
-      <a href="#despre" style="display:inline-block;margin-top:1rem;padding:0.5rem 1rem;background-color:#f97316;color:white;text-decoration:none;border-radius:4px;">Află mai multe</a>
-    </section>
+    
+<!-- HERO SECTION NOUĂ -->
+<section id="acasa" style="min-height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background-color: #000; color: white; text-align: center; padding: 2rem;">
+  <h1 style="font-size: 3rem; font-weight: bold; margin-bottom: 1rem;">Stop Pariuri.</h1>
+  <p style="font-size: 1.3rem; margin-bottom: 2rem;">Escape the matrix, be the change.</p>
+  <div style="display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
+    <a href="#resurse" style="padding: 0.75rem 1.5rem; background-color: transparent; border: 2px solid white; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">📚 Află adevărul</a>
+    <a href="#contact" style="padding: 0.75rem 1.5rem; background-color: #f97316; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">💬 Cere ajutor acum</a>
+  </div>
+</section>
+
 
     <section id="despre">
       <h2>Despre proiect</h2>
