--- a/index.html
+++ b/index.html
@@ -340,10 +340,12 @@ html {
         <li><a href="#contact">📞 Contact</a></li>
       </ul>
 
+
 <div class="hamburger" id="hamburger">
   <span></span>
   <span></span>
   <span></span>
+  <div class="hamburger-label">MENU</div>
 </div>
 
 <div class="nav-dropdown" id="nav-dropdown">
@@ -416,10 +418,12 @@ html {
     <li>🔹 Ghidare 1-la-1 prin mesaje sau apel, dacă vrei</li>
   </ul>
 
+
 <div class="hamburger" id="hamburger">
   <span></span>
   <span></span>
   <span></span>
+  <div class="hamburger-label">MENU</div>
 </div>
 
 <div class="nav-dropdown" id="nav-dropdown">
@@ -509,10 +513,12 @@ html {
     <li>📸 Instagram: <a href="https://instagram.com/meferrrrrrrrrr" target="_blank">@meferrrrrrrrrr</a></li>
   </ul>
 
+
 <div class="hamburger" id="hamburger">
   <span></span>
   <span></span>
   <span></span>
+  <div class="hamburger-label">MENU</div>
 </div>
 
 <div class="nav-dropdown" id="nav-dropdown">
